# tyrell

./: .gitignore  README.md  config.example.yml  moby10b.txt  pyproject.toml
documentation/: README.md  TECHNICAL_PREREQUISITE_GUIDANCE.md
tyrell/core/: __init__.py  builders.py  chunker.py  classloader.py  config.py  defaults.py  jsoncore.py  logger.py  time.py  utils.py  yaml.py
tyrell/interfaces/: api.py  client.py
tyrell/llm/: __init__.py  llm.py  prompts.py  responses.py  summarizer.py
